while/tests/valid/RealSub_Valid_1.while
real f(real x) {
    return (0.0 - x);
}

void main() {
   print f(1.234);
}
