while/tests/invalid-parsing/Parsing_Invalid_15.while
void f() {
    void x = 1;
    return x;
}